# insight-profiler

./: .gitignore  .pre-commit-config.yaml  BUILD.md  LICENSE  README.md  flake.nix
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: FEATURES.md
firmware/: CMakeLists.txt  sdkconfig.defaults
firmware/components/ina228/: CMakeLists.txt  ina228.cpp
firmware/components/ina228/include/: ina228.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
hardware/: block-diagram.md
sdk-js/: biome.json  package.json  tsconfig.json  tsup.config.ts
sdk-js/examples/: index.html
sdk-js/src/: client.ts  index.ts
sdk-python/: README.md  pyproject.toml
sdk-python/examples/: log_to_csv.py  plot_live.py
sdk-python/insight_profiler/: __init__.py  client.py
sdk-python/tests/: test_client.py
